--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>EstateVisio Studio - AI Real Estate Video Montage</title>
     <meta name="description" content="Create stunning real-estate video montages with AI-powered analysis, quality grading, and cinematic transitions. Simple and advanced workflows for professional results." />
     <meta name="author" content="EstateVisio Studio" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
     <meta property="og:title" content="EstateVisio Studio - AI Real Estate Video Montage" />
     <meta property="og:description" content="Create stunning real-estate video montages with AI-powered analysis and cinematic transitions." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="public/social_card.png" />
+    
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
   </head>
 
   <body>
